# airflow-dbt-docker-compose

./: .env.example  .gitignore  README.md  docker-compose.yml  init-airflow-uid.sh  init-ssh-key.sh  start-local.sh  start-prod.sh  start.sh  up.sh
airflow/: .gitignore  Dockerfile  README.md  pyproject.toml
airflow/dags/: dbt_transform.py  extract_load_game_events.py  generate_game_events.py
airflow/dags/utils/: db_connection.py  preprocessing.py
dbt/: .gitignore  Dockerfile  README.md  dbt_project.yml  pyproject.toml
dbt/models/bi/: schema.yml  view_fct_user_event_metrics.sql
dbt/models/marts/: dim_users.sql  fct_user_event_metrics.sql  schema.yml
dbt/models/raw/: sources.yml
dbt/models/staging/: schema.yml  stg_game_events.sql
dbt/profiles/: .user.yml  profiles.yml
